# nudgio

./: README.md
.examples/server-django-ninja/: .gitignore  pyproject.toml  requirements.txt
.examples/server-django-ninja/apps/: __init__.py
.examples/server-django-ninja/apps/accounts/: admin.py  apps.py  models.py  router.py
.examples/server-django-ninja/apps/accounts/migrations/: 0001_initial.py
.examples/server-django-ninja/apps/accounts/subrouters/: auth_subrouter.py  invitations_subrouter.py  oauth_subrouter.py  organizations_members_subrouter.py  organizations_subrouter.py  subscriptions_subrouter.py
.examples/server-django-ninja/apps/accounts/tests/: test_activity.py  test_auth.py  test_invitations.py  test_oauth.py  test_organizations.py  test_stripe.py
.examples/server-django-ninja/apps/accounts/utils/: activity_utils.py  auth_utils.py  decorators_utils.py  oauth_utils.py  password_utils.py  stripe_utils.py  token_utils.py
.examples/server-django-ninja/apps/assetmanager/: admin.py  apps.py  models.py  router.py
.examples/server-django-ninja/apps/assetmanager/examples/: double_entry_example.py  fund_example.py  syndicate_example.py
.examples/server-django-ninja/apps/assetmanager/migrations/: 0001_initial.py
.examples/server-django-ninja/apps/assetmanager/savings/: models_simple_transactions.py
.examples/server-django-ninja/apps/assetmanager/subrouters/: entities_invitations_subrouter.py  entities_subrouter.py
.examples/server-django-ninja/apps/main/: router.py  views.py
.examples/server-django-ninja/apps/nexotype/: apps.py  models.py  router.py
.examples/server-django-ninja/apps/nexotype_neo4j/: apps.py  models.py  router.py
.examples/server-django-ninja/apps/nexotype_surreal/: apps.py  models.py  router.py
.examples/server-django-ninja/core/: api.py  settings.py  urls.py
client/: .env.example  components.json  nixpacks.toml  (+4 more)
(+1845 files in other folders)
